<resources>
    <string name="app_name">TickitBookit</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="your_email">Your Email</string>
    <string name="remember_me">Remember Me</string>
    <string name="sign_in">Sign In</string>
    <string name="or_connect_using">Or connect using</string>
    <string name="already_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="let_s_get_started">Let’s Get Started!</string>
    <string name="create_your_account">Create your account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgotpass_text">Enter the email address associated with your account</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="submit">Submit</string>
    <string name="activity_detail_title_1">Zaanse Schans Windmills, Marken and Volendam Half-Day Trip from Amsterdam</string>
    <string name="guide_language">Guide Language</string>
    <string name="overview">Overview</string>
    <!--<string name="overview_desc">Next, you\'ll travel to the world-famous fishing villages of Volendam and Marken, on the coast of the former Zuiderzee (now called Ijselmeer). The old wooden houses here are built on stilts and locals still wear their colorful traditional dresses. Then, take a 20-minute boat trip from Volendam to Marken, with approximately 45 minutes at each stop (summer only). The cruise is optional but is included in the cost of the tour.
\n
During the day you'll also stop at one of the few farms where cheese is still made in the traditional way.
\n<B>7-Hour tour departing at 12pm</B>
This option was created based on customer feedback to offer an alternative itinerary and longer tour duration. The afternoon tour at 12pm is 7hours in duration. It visits the windmill village of "Zaanse Schans" and the towns of Marken and Volendam. However, this tour gives you more time at all 3 locations.</string>

    <string name="info_desc">Next, you\'ll travel to the world-famous fishing villages of Volendam and Marke Next, you\'ll travel to the world-famous fishing villages of Volendam and Marke</string>-->
    <string name="information">Information</string>
    <string name="meeting_point">Meeting Point</string>
    <string name="nearby_activities">Nearby Activities</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="trips">Trips</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_for_activities">Search for activities</string>
    <string name="activity">Activity</string>
    <string name="hotels">Hotels</string>
    <string name="where_are_you_going">Where are you going</string>
    <string name="top_destination">Top Destination</string>
    <string name="view_all">View All</string>
    <string name="gallery">Gallery</string>
    <string name="filter">Filter</string>
    <string name="reset">Reset</string>
    <string name="price_range">Price Range</string>
    <string name="category">Category</string>
    <string name="we_will_email_you_a_link_to_reset_your_password">We will email you a link to reset your\npassword</string>
    <string name="apply">Apply</string>
    <string name="done">Done</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="participants">Participants</string>
    <string name="number_of_adults">Number of Adults</string>
    <string name="age_13_years_and_above">Age 13 years and above</string>
    <string name="departure">Departure</string>
    <string name="add_return_date">Add Return date</string>
    <string name="save_more_on_round_trips">Save more on round trips!</string>
    <string name="traveller">Traveller</string>
    <string name="search_flight">Search Flight</string>
    <string name="fare_type">Fare Type</string>
    <string name="departure_times">Departure Times</string>
    <string name="wallet_promo">You’ve won a wallet promo, <B>$200</B></string>
    <string name="add_traveller">Add Traveller</string>
    <string name="imp_text"><b>*Important:</b> The airline fee is indicative. Ticket Bookit does not guarantee the accuracy of this information. All fees mentioned are per passenger</string>
</resources>