<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rotationX="2"
    tools:context=".activity.ForgotPasswrodActivity">

    <ImageView
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="6dp"
        android:adjustViewBounds="true"
        android:padding="@dimen/_5sdp"
        android:scaleType="centerCrop"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.tickitbookit.controls.CTextView
        android:id="@+id/CTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/forgot_password"
        android:textColor="@color/textGreen"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049" />

    <com.tickitbookit.controls.CTextView
        android:id="@+id/CTextView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/forgotpass_text"
        android:textColor="@color/textGray"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CTextView" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="@dimen/_150sdp"
        android:layout_marginLeft="@dimen/_60sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginRight="@dimen/_60sdp"
        android:layout_weight="0.1"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_round_lock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CTextView2" />


    <com.tickitbookit.controls.CTextView
        android:id="@+id/CTextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        android:text="@string/your_email"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/bg_edittext"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CTextView4">

        <com.tickitbookit.controls.CEditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0.8"
            android:background="@null"
            android:baselineAligned="false"
            android:hint="abc@gmail.com"
            android:padding="@dimen/_5sdp"
            android:textSize="@dimen/_10sdp"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="0.1"
            android:adjustViewBounds="true"
            android:padding="@dimen/_8sdp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_email" />
    </LinearLayout>


    <com.tickitbookit.controls.CTextView
        android:id="@+id/CTextView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="556dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_button"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.tickitbookit.controls.CTextView
        android:id="@+id/CTextView6"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_gravity="center"
        android:layout_marginStart="64dp"
        android:layout_marginTop="31dp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toStartOf="@+id/CTextView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CTextView7" />

    <com.tickitbookit.controls.CTextView
        android:id="@+id/CTextView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="3dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="60dp"
        android:text="@string/sign_up"
        android:textColor="@color/purple_200"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/CTextView6"
        app:layout_constraintTop_toBottomOf="@+id/CTextView7" />

</androidx.constraintlayout.widget.ConstraintLayout>