<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".activity.LoginActivity">


        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            android:padding="@dimen/_5sdp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.tickitbookit.controls.CTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/let_s_get_started"
            android:textColor="@color/textGreen"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />


        <com.tickitbookit.controls.CTextViewLight
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:text="@string/create_your_account"
            android:textColor="@color/textGray"
            android:textSize="@dimen/_11sdp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:orientation="vertical">

                <com.tickitbookit.controls.CTextViewSemibold
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/bg_edittext"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.tickitbookit.controls.CEditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@null"
                        android:layout_weight="1"
                        android:hint="abc@gmail.com"
                        android:padding="@dimen/_5sdp"
                        android:textSize="@dimen/_10sdp" />

                    <ImageView
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:src="@drawable/ic_user" />

                </LinearLayout>

                <com.tickitbookit.controls.CTextViewSemibold
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/last_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/bg_edittext"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.tickitbookit.controls.CEditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.8"
                        android:background="@null"
                        android:hint="abc@gmail.com"
                        android:padding="@dimen/_5sdp"
                        android:textSize="@dimen/_10sdp" />

                    <ImageView
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:src="@drawable/ic_user" />

                </LinearLayout>

                <com.tickitbookit.controls.CTextViewSemibold
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/your_email"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/bg_edittext"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.tickitbookit.controls.CEditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.8"
                        android:background="@null"
                        android:hint="abc@gmail.com"
                        android:padding="@dimen/_5sdp"
                        android:textSize="@dimen/_10sdp" />

                    <ImageView
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:src="@drawable/ic_email" />

                </LinearLayout>

                <com.tickitbookit.controls.CTextViewSemibold
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/bg_edittext"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.tickitbookit.controls.CEditText
                        android:id="@+id/edtPassword"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.8"
                        android:background="@null"
                        android:inputType="textPassword"
                        android:padding="@dimen/_5sdp"
                        android:text="fkjefjkfjkf"
                        android:letterSpacing="0.5"
                        android:textSize="@dimen/_10sdp" />

                    <ImageView
                        android:id="@+id/passwordVisible"
                        android:layout_width="@dimen/_17sdp"
                        android:layout_height="@dimen/_17sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:src="@drawable/ic_vision" />

                </LinearLayout>


                <com.tickitbookit.controls.CTextViewSemibold
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/confirm_password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/bg_edittext"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.tickitbookit.controls.CEditText
                        android:id="@+id/edtConfirmPassword"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.8"
                        android:background="@null"
                        android:inputType="textPassword"
                        android:padding="@dimen/_5sdp"
                        android:text="fkjefjkfjkf"
                        android:letterSpacing="0.5"
                        android:textSize="@dimen/_10sdp" />

                    <ImageView
                        android:id="@+id/confirmPasswordVisible"
                        android:layout_width="@dimen/_17sdp"
                        android:layout_height="@dimen/_17sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:src="@drawable/ic_vision" />

                </LinearLayout>

                <com.tickitbookit.controls.CTextViewSemibold
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/bg_button"
                    android:text="@string/sign_up"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp" />

                <LinearLayout
                    android:id="@+id/llLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_16sdp"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <com.tickitbookit.controls.CTextViewLight
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/already_have_an_account"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_11sdp" />

                    <com.tickitbookit.controls.CTextViewSemibold
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:text="@string/sign_in"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:textColor="@color/purple_200"
                        android:textSize="@dimen/_11sdp" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</ScrollView>