<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".activity.LoginActivity">


        <com.tickitbookit.controls.CTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/welcome_back"
            android:textColor="@color/textGreen"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />


        <com.tickitbookit.controls.CTextViewLight
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:text="@string/sign_in_to_continue"
            android:textColor="@color/textGrayDark"
            android:textSize="@dimen/_11sdp" />


        <com.tickitbookit.controls.CTextViewSemibold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/your_email"
            android:textColor="@color/black"
            android:textSize="@dimen/_11sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:background="@drawable/bg_edittext"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.tickitbookit.controls.CEditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.8"
                android:background="@null"
                android:layout_marginStart="@dimen/_10sdp"
                android:hint="abc@gmail.com"
                android:textColorHint="@color/textGrayDark"
                android:textColor="@color/black"
                android:padding="@dimen/_5sdp"
                android:textSize="@dimen/_10sdp" />

            <ImageView
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:src="@drawable/ic_email" />

        </LinearLayout>

        <com.tickitbookit.controls.CTextViewSemibold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="Password"
            android:textColor="@color/black"
            android:textSize="@dimen/_11sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:background="@drawable/bg_edittext"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.tickitbookit.controls.CEditText
                android:id="@+id/edtPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.8"
                android:background="@null"
                android:inputType="textPassword"
                android:layout_marginStart="@dimen/_10sdp"
                android:letterSpacing="0.5"
                android:padding="@dimen/_5sdp"
                android:text="sanjay damor"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp" />

            <ImageView
                android:id="@+id/imgVisiblePassword"
                android:layout_width="@dimen/_17sdp"
                android:layout_height="@dimen/_17sdp"
                android:adjustViewBounds="true"
                android:layout_marginEnd="@dimen/_10sdp"
                android:src="@drawable/ic_vision" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="horizontal">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true" />

                <com.tickitbookit.controls.CTextViewLight
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.8"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/remember_me"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11sdp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="end"
                android:layout_weight="0.5"
                android:gravity="end"
                android:orientation="horizontal">


                <com.tickitbookit.controls.CTextViewSemibold
                    android:id="@+id/tvForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/purple_200"
                    android:textSize="@dimen/_11sdp" />


            </LinearLayout>
        </LinearLayout>

        <com.tickitbookit.controls.CTextViewSemibold
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:background="@drawable/bg_button"
            android:text="@string/sign_in"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp" />

        <com.tickitbookit.controls.CTextViewLight
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/or_connect_using"
            android:textColor="@color/textGray"
            android:textSize="@dimen/_11sdp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:orientation="horizontal">


            <LinearLayout
                android:id="@+id/llFacebook"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_height="@dimen/_45sdp"
                android:gravity="center"
                android:background="@drawable/round_corner_blue_border"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_facebook"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp" />


            </LinearLayout>


            <LinearLayout
                android:id="@+id/llGoogle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_height="@dimen/_45sdp"
                android:gravity="center"
                android:background="@drawable/round_corner_google_border"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_google"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp" />


            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:id="@+id/llRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.tickitbookit.controls.CTextViewLight
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/already_have_an_account"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <com.tickitbookit.controls.CTextViewSemibold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/_10sdp"
                android:text="@string/sign_up"
                android:textColor="@color/purple_200"
                android:layout_marginStart="@dimen/_5sdp"
                android:textSize="@dimen/_11sdp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>